<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="325dp"
        android:layout_height="139dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="1dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/login"
        android:layout_width="252dp"
        android:layout_height="46dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#4285F4"
        android:cursorVisible="true"
        android:drawableTint="#4285F4"
        android:ems="10"
        android:hint="@string/login"

        android:inputType="text"
        android:textColor="#3D5367"
        android:textColorLink="#3D5367"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/textColor"
        android:drawableTint="@color/textColor"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/inputColor"
        android:textColorLink="@color/inputColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@color/buttonBackground"
        android:elevation="10dp"
        android:text="@string/enter_button"
        android:textAlignment="center"
        android:textColor="@color/buttonColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:background="@color/buttonBackground"
        android:elevation="10dp"
        android:text="@string/register_button"
        android:textAlignment="center"
        android:textColor="@color/buttonColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/textColor"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.531" />

</androidx.constraintlayout.widget.ConstraintLayout>